--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.7.2
 Django==4.2.6
 django-cors-headers==4.3.0
+et-xmlfile==1.1.0
 numpy==1.26.1
+openpyxl==3.1.2
 pandas==2.1.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
@@ -9,3 +11,4 @@ pytz==2023.3.post1
 six==1.16.0
 sqlparse==0.4.4
 tzdata==2023.3
+XlsxWriter==3.1.9
