--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 asgiref==3.7.2
 Django==4.2.6
 django-cors-headers==4.3.0
+django-csp==3.7
 et-xmlfile==1.1.0
+lxml==4.9.3
 numpy==1.26.1
 openpyxl==3.1.2
 pandas==2.1.1
 python-dateutil==2.8.2
+python-docx==1.1.0
 python-dotenv==1.0.0
 pytz==2023.3.post1
 six==1.16.0
 sqlparse==0.4.4
+typing_extensions==4.8.0
 tzdata==2023.3
 XlsxWriter==3.1.9
