--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ lxml==4.9.3
 numpy==1.26.1
 openpyxl==3.1.2
 pandas==2.1.1
+psycopg==3.1.14
+psycopg-binary==3.1.14
 python-dateutil==2.8.2
 python-docx==1.1.0
 python-dotenv==1.0.0
