--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,27 @@
 asgiref==3.7.2
 Django==4.2.6
+django-api-admin==1.1.6
 django-cors-headers==4.3.0
 django-csp==3.7
+djangorestframework==3.15.1
+ecdsa==0.18.0
 et-xmlfile==1.1.0
 lxml==4.9.3
+mysqlclient==2.2.0
 numpy==1.26.1
 openpyxl==3.1.2
 pandas==2.1.1
 psycopg==3.1.14
 psycopg-binary==3.1.14
+pyasn1==0.6.0
 python-dateutil==2.8.2
 python-docx==1.1.0
 python-dotenv==1.0.0
+python-jose==3.3.0
 pytz==2023.3.post1
+rsa==4.9
 six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
 tzdata==2023.3
 XlsxWriter==3.1.9
-python-jose
